BUG: Add vert scrollbar to s.panel on y overflow
Fixes #173.

--- a/empress/support_files/css/empress.css
+++ b/empress/support_files/css/empress.css
@@ -425,6 +425,8 @@ label:hover .tooltip {
     top: 0px;
     right: 0px;
     width: 450px;
+    max-height: 100%;
+    overflow-y: auto;
 }
 
 #show-ctrl {
